--- a/src/html/third.html
+++ b/src/html/third.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
-<body class='second'>
-    <h1>I'm the second page.</h1>
+<body class='third'>
+    <h1>I'm the third page.</h1>
     <a href="index.html">Back to home</a>
 
     <script src="../js/main.js"></script>
